Fix Name of the Image not showing on carousel on initial load Fix Download button not showing on Carousel

--- a/src/components/v2/common/detail-page/components/carousel.css
+++ b/src/components/v2/common/detail-page/components/carousel.css
@@ -20,11 +20,11 @@
     display: flex;
   }
 
-  .slick-prev, .slick-next {
+  .details-slider .slick-prev, .slick-next {
     font-size: 15px !important;
   }
   
-   .slick-prev:before, .slick-next:before  {
+  .details-slider   .slick-prev:before, .slick-next:before  {
     content: '' !important;
   }
   
